powder_files += files(
	'BitmapBrush.cpp',
	'Brush.cpp',
	'ConfigTool.cpp',
	'DecorationTool.cpp',
	'Favorite.cpp',
	'GameController.cpp',
	'GameModel.cpp',
	'GameView.cpp',
	'GOLTool.cpp',
	'Menu.cpp',
	'PropertyTool.cpp',
	'QuickOptions.cpp',
	'SampleTool.cpp',
	'SignTool.cpp',
	'StackTool.cpp',
	'ToolButton.cpp',
	'Tool.cpp',
)
